--- a/config/database.yml
+++ b/config/database.yml
@@ -1,8 +1,8 @@
 defaults: &defaults
   adapter: postgresql
   encoding: unicode
-  username: docker
-  password: docker
+  username: tania
+  password: password
   host: localhost
   pool: 25
 
