--- a/test/fixtures/gifts.yml
+++ b/test/fixtures/gifts.yml
@@ -1,7 +1,7 @@
 waffle_maker:
   name: 'Waffle Maker'
   description: 'We both love waffles'
-  category: kitchen
+  category_id: kitchen.id
   price: 69.99
   desired_quantity: 1
   remainder_available: 1
@@ -10,7 +10,7 @@ waffle_maker:
 baking_bowl:
   name: 'Baking Bowl'
   description: 'TJ needs a bowl to mix her baking mixtures'
-  category: kitchen
+  category_id: kitchen
   price: 49.99
   desired_quantity: 1
   remainder_available: 1
@@ -19,7 +19,7 @@ baking_bowl:
 ps4:
   name: 'PS4'
   description: 'Iain really wants a PS4'
-  category: entertainment
+  category_id: entertainment
   price: 599.99
   desired_quantity: 1
   remainder_available: 1
@@ -28,7 +28,7 @@ ps4:
 coffee_table:
   name: 'Coffee table'
   description: 'Need a second coffee table'
-  category: decor
+  category_id: decor
   price: 599.99
   desired_quantity: 1
   remainder_available: 1
