Annotate models fixtures and model tests

--- a/test/fixtures/gifts.yml
+++ b/test/fixtures/gifts.yml
@@ -1,3 +1,18 @@
+# == Schema Information
+#
+# Table name: gifts
+#
+#  id                  :integer          not null, primary key
+#  description         :text             not null
+#  guest_id            :integer
+#  desired_quantity    :integer          default(0)
+#  remainder_available :integer          default(0)
+#  website_link        :text
+#  category_id         :integer
+#  price               :float            default(0.0)
+#  name                :string
+#
+
 waffle_maker:
   name: 'Waffle Maker'
   description: 'We both love waffles'
