--- a/test/fixtures/categories.yml
+++ b/test/fixtures/categories.yml
@@ -1,3 +1,11 @@
+# == Schema Information
+#
+# Table name: categories
+#
+#  id   :integer          not null, primary key
+#  name :string           not null
+#
+
 kitchen:
   name: 'kitchen'
 
