--- a/test/fixtures/guests.yml
+++ b/test/fixtures/guests.yml
@@ -14,9 +14,11 @@ aj:
   surname: 'Troll' 
   address: '81 Cold St, Dunedin'
   email: 'anita@gmail.com'
+  age_category: 'adult'
 
 gw:
   first_name: 'Gen'
   surname: 'Cool'
   address: '100 George St, Dunedin'
   email: 'gen@gmail.com'
+  age_category: 'adult'
