Add email field to RSVP

--- a/test/fixtures/rsvps.yml
+++ b/test/fixtures/rsvps.yml
@@ -12,6 +12,7 @@
 rsvp_one:
   guest: gw
   attending: 'yes'
+  email: 'gen@gmail.com'
   main_meal_preference: 'Steak'
   dessert_preference: 'Creme brulee'
   dietary_requirements: 'i dont like carrots'
