Fix all specs to use double quotes and get rid of unnecessary tests

--- a/test/fixtures/guests.yml
+++ b/test/fixtures/guests.yml
@@ -1,25 +1,13 @@
-# == Schema Information
-#
-# Table name: guests
-#
-#  id           :integer          not null, primary key
-#  first_name   :string
-#  surname      :string
-#  address      :text
-#  email        :string
-#  age_category :string
-#
-
 aj:
-  first_name: 'Anita'
-  surname: 'Troll' 
-  address: '81 Cold St, Dunedin'
-  email: 'anita@gmail.com'
-  age_category: 'adult'
+  first_name: "Anita"
+  surname: "Troll"
+  address: "81 Cold St, Dunedin"
+  email: "anita@gmail.com"
+  age_category: "adult"
 
 gw:
-  first_name: 'Gen'
-  surname: 'Cool'
-  address: '100 George St, Dunedin'
-  email: 'gen@gmail.com'
-  age_category: 'adult'
+  first_name: "Gen"
+  surname: "Cool"
+  address: "100 George St, Dunedin"
+  email: "gen@gmail.com"
+  age_category: "adult"
